Split project into cli and library. Updated all dependencies. Minor tweaks on code for efficiency